--- a/.github/workflows/create.tag.yml
+++ b/.github/workflows/create.tag.yml
@@ -14,7 +14,8 @@ jobs:
         id: calver
         with:
           date_format: "%Y.%m.%d"
-          release: ${{ github.event_name == 'merge' && github.ref == 'refs/heads/master' }}
+          release: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+          release_branch: master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
