--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,88 +65,46 @@ jobs:
           --header 'Accept: application/vnd.github.luke-cage-preview+json' \
           --data '{"enforce_admins":true,"required_pull_request_reviews":{"dismiss_stale_reviews":true,"require_code_owner_reviews":true,"required_approving_review_count":1},"required_conversation_resolution":true,"required_status_checks":null,"restrictions":null,"required_linear_history":true}'
 
-  create-github-relase:
+  trigger-action-create-github-tag:
     runs-on: ubuntu-latest
     needs: publish-packages-npm
-    permissions:
-      contents: write
-      discussions: write
     steps:
-      - name: Generate tag release
-        uses: StephaneBour/actions-calver@v1.5
-        id: calver
-        with:
-          date_format: "%Y.%m.%d"
-          release: ${{ github.event_name == 'merge' && github.ref == 'refs/heads/master' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - uses: actions/checkout@v3
-      - uses: rickstaa/action-create-tag@v1
-        with:
-          tag: ${{ steps.calver.outputs.release }}
+      - name: Trigger github action create github tag
+        run: |
+          curl --request PUT \
+          --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/actions/workflows/58856079/dispatches' \
+          --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
+          --data '{"ref":"master"}'
 
-      - name: Get current PR
-        uses: 8BitJonny/gh-get-current-pr@2.2.0
-        id: PR
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create Release
-        id: create_release
-        uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag: ${{ steps.calver.outputs.release }}
-          name: ${{ steps.calver.outputs.release }}
-          body: ${{ steps.PR.outputs.pr_body }}
-          discussionCategory: "announcements"
-          draft: false
-          prerelease: false
-
-  send-slack-notifications:
-    needs: [publish-packages-npm, create-github-relase]
+  trigger-action-send-slack-notifications:
+    needs: [publish-packages-npm, trigger-action-create-github-tag]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Send slack notification on chanel Ninbus updates
-        id: slack-nimbus-updates
-        uses: slackapi/slack-github-action@v1.23.0
-        with:
-          payload-file-path: ./.github/resources/payload-notification.json
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_NIMBUS_UPDATES }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-
-      - name: Send slack notification on chanel Ninbus deploying
-        id: slack-deploying
-        uses: slackapi/slack-github-action@v1.23.0
-        with:
-          payload-file-path: ./.github/resources/payload-notification.json
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_DEPLOYING }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-
-      - name: Send slack notification on chanel Tech product updates
-        id: slack-tech-product-updates
-        uses: slackapi/slack-github-action@v1.23.0
-        with:
-          payload-file-path: ./.github/resources/payload-notification.json
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_TECH_PRODUCT_UPDATES }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      - name: Trigger github action send slack notifications
+        run: |
+          curl --request PUT \
+          --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/actions/workflows/58847410/dispatches' \
+          --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
+          --data '{"ref":"master"}'
 
   trigger-action-update-generate-documentation:
     needs:
-      [publish-packages-npm, create-github-relase, send-slack-notifications]
+      [
+        publish-packages-npm,
+        trigger-action-create-github-tag,
+        trigger-action-send-slack-notifications,
+      ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Trigger github action update documentation
         run: |
           curl --request PUT \
