--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Trigger github action create github tag
         run: |
-          curl --request PUT \
+          curl --request POST \
           --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/actions/workflows/58856079/dispatches' \
           --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
           --data '{"ref":"master"}'
@@ -88,7 +88,7 @@ jobs:
 
       - name: Trigger github action send slack notifications
         run: |
-          curl --request PUT \
+          curl --request POST \
           --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/actions/workflows/58847410/dispatches' \
           --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
           --data '{"ref":"master"}'
@@ -107,7 +107,7 @@ jobs:
 
       - name: Trigger github action update documentation
         run: |
-          curl --request PUT \
+          curl --request POST \
           --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/actions/workflows/51785513/dispatches' \
           --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
           --data '{"ref":"master"}'
