feat: add new action to comment checklist

--- a/.github/workflows/checklist-comment.yml
+++ b/.github/workflows/checklist-comment.yml
@@ -12,6 +12,5 @@ jobs:
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          message: |
-            Hello world ! :wave:
+          filePath: ./.github/resources/checklist.txt
           comment_tag: execution
