--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@vanilla-extract/webpack-plugin": "^2.2.0",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
+    "babel-plugin-module-resolver": "^5.0.0",
     "child_process": "^1.0.2",
     "dts-bundle-generator": "^7.1.0",
     "eslint": "^8.19.0",
