--- a/packages/helper/package.json
+++ b/packages/helper/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nimbus-helper",
   "displayName": "@nimbus-ds/helper",
-  "description": "",
+  "description": "The Nimbus Helper extension is a powerful tool for developers working with VS Code. It is designed to streamline and enhance your workflow, offering advanced and customized features to maximize productivity.",
   "version": "0.0.0",
+  "icon": "./src/assets/nimbus-helper-logo.png",
   "engines": {
     "vscode": "^1.79.0"
   },
