--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check && yarn bump:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:check && yarn bump:next && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
-    "publish:stable": "npm run build && yarn bump:stable && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
+    "publish:next": "yarn bump:check && yarn bump:next && npm run build && yarn publish:npm:next",
+    "publish:stable": "npm run build && yarn bump:stable && yarn publish:npm",
+    "publish:npm:next": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public --tag next",
+    "publish:npm:stable": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache",
     "storybook": "storybook dev -p 6006",
     "start:dev": "yarn storybook",
