--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,15 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
 
+      - name: Create .env file
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        run: yarn
+
+      - name: Create .env file
+        uses: ozaytsev86/create-env-file@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}
+
       - name: Publish packages
         run: |
           export NODE_OPTIONS="--max_old_space_size=8192"
