--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,13 +39,9 @@ jobs:
         run: yarn
 
       - name: Create .env file
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: yarn
-
-      - name: Create .env file
         uses: ozaytsev86/create-env-file@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}
+          INPUT_ENV_GITHUB_TOKEN: ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}
 
       - name: Publish packages
         run: |
