--- a/packages/helper/package.json
+++ b/packages/helper/package.json
@@ -22,9 +22,8 @@
   "scripts": {
     "vscode:prepublish": "yarn run build",
     "build": "yarn prepublish && yarn g:webpack",
-    "build:docs": "yarn workspace nimbus-design-system run build:docs",
     "build:elements": "babel-node -x .ts ./.scripts/build-doc-elements",
-    "prepublish": "yarn build:docs && yarn build:elements",
+    "prepublish": "yarn build:elements",
     "clean": "rm -rf dist",
     "watch": "yarn g:webpack --watch"
   },
