feat: adjusts extension and box component

--- a/.eslintrc
+++ b/.eslintrc
@@ -72,6 +72,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "class-methods-use-this": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
