--- a/packages/helper/package.json
+++ b/packages/helper/package.json
@@ -2,7 +2,7 @@
   "name": "nimbus-helper",
   "displayName": "Nimbus Helper",
   "description": "The Nimbus Helper extension is a powerful tool for developers working with VS Code.",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "publisher": "Nuvemshop",
   "icon": "./src/assets/nimbus-helper-logo.png",
   "engines": {
@@ -14,6 +14,14 @@
   "activationEvents": [
     "onStartupFinished"
   ],
+  "contributes": {
+    "commands": [
+      {
+        "command": "nimbus-helper.checknimbusdependencies",
+        "title": "Check for updates to nimbus packages"
+      }
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/TiendaNube/nimbus-design-system/blob/master/packages/helper/README.md"
