--- a/packages/react/src/atomic/Popover/package.json
+++ b/packages/react/src/atomic/Popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/popover",
-  "version": "4.1.0",
+  "version": "4.1.1-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
     "@nimbus-ds/box": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^",
     "@vanilla-extract/dynamic": "^2.0.3"
-  }
+  },
+  "stableVersion": "4.1.0"
 }
