--- a/packages/react/src/atomic/Title/package.json
+++ b/packages/react/src/atomic/Title/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/title",
-  "version": "3.1.0",
+  "version": "3.1.1-rc.3",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -30,5 +30,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "3.1.0"
 }
