--- a/packages/react/src/atomic/Checkbox/package.json
+++ b/packages/react/src/atomic/Checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/checkbox",
-  "version": "2.2.0",
+  "version": "2.2.1-rc.3",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "2.2.0"
 }
