--- a/packages/react/src/composite/Card/package.json
+++ b/packages/react/src/composite/Card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/card",
-  "version": "3.1.0",
+  "version": "3.1.1-rc.3",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
     "@nimbus-ds/tag": "workspace:^",
     "@nimbus-ds/text": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "3.1.0"
 }
