--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "9.9.0-rc.3",
+  "version": "9.9.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
     "glob": "^8.0.3",
     "rainbow-sprinkles": "^0.14.0",
     "ts-node": "^10.9.1"
-  },
-  "stableVersion": "9.8.0"
+  }
 }
