feat: add trim to chip component

--- a/packages/react/src/atomic/Chip/package.json
+++ b/packages/react/src/atomic/Chip/package.json
@@ -32,7 +32,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/webpack": "workspace:^"
+    "@nimbus-ds/webpack": "workspace:^",
+    "@nimbus-ds/box": "workspace:^"
   },
   "stableVersion": "2.3.0"
 }
