--- a/packages/react/src/atomic/IconButton/package.json
+++ b/packages/react/src/atomic/IconButton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/icon-button",
-  "version": "4.1.1-rc.3",
+  "version": "4.1.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
   "devDependencies": {
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^"
-  },
-  "stableVersion": "4.1.0"
+  }
 }
