--- a/packages/react/src/atomic/Toggle/package.json
+++ b/packages/react/src/atomic/Toggle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/toggle",
-  "version": "2.2.1-rc.3",
+  "version": "2.2.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  },
-  "stableVersion": "2.2.0"
+  }
 }
