--- a/packages/react/src/composite/Modal/package.json
+++ b/packages/react/src/composite/Modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/modal",
-  "version": "1.5.2-rc.3",
+  "version": "1.5.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -36,6 +36,5 @@
     "@nimbus-ds/text": "workspace:^",
     "@nimbus-ds/title": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^"
-  },
-  "stableVersion": "1.5.1"
+  }
 }
