fix: collapsible export

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,6 +77,9 @@
       "@nimbus-ds/accordion": ["./packages/react/src/composite/Accordion/src"],
       "@nimbus-ds/alert": ["./packages/react/src/composite/Alert/src"],
       "@nimbus-ds/card": ["./packages/react/src/composite/Card/src"],
+      "@nimbus-ds/collapsible": [
+        "./packages/react/src/composite/Collapsible/src"
+      ],
       "@nimbus-ds/modal": ["./packages/react/src/composite/Modal/src"],
       "@nimbus-ds/pagination": [
         "./packages/react/src/composite/Pagination/src"
