--- a/packages/react/src/composite/Sidebar/package.json
+++ b/packages/react/src/composite/Sidebar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/sidebar",
-  "version": "3.2.2",
+  "version": "3.3.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.0",
-    "@nimbus-ds/title": "workspace:^"
+    "@nimbus-ds/title": "workspace:^",
+    "react-remove-scroll": "2.5.7"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -34,5 +35,6 @@
     "@nimbus-ds/button": "workspace:^",
     "@nimbus-ds/text": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "3.2.2"
 }
