fix(chip): trigger onClick when press close icon (#240)
* fix(chip): removable click

* fix: changelog pr reference

* fix: add styles changelog

* fix: nimbus-styles changelog update

* fix: update changelog date

* fix: sidebar

--- a/packages/react/src/atomic/Chip/package.json
+++ b/packages/react/src/atomic/Chip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/chip",
-  "version": "2.3.2",
+  "version": "2.3.3-rc.3",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -34,5 +34,6 @@
   "devDependencies": {
     "@nimbus-ds/box": "workspace:^",
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "2.3.2"
 }
