--- a/packages/react/src/atomic/MultiSelect/package.json
+++ b/packages/react/src/atomic/MultiSelect/package.json
@@ -14,10 +14,10 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/chip": "workspace:^",
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
-    "@nimbus-ds/skeleton": "workspace:^",
-    "@nimbus-ds/chip": "workspace:^"
+    "@nimbus-ds/skeleton": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
