--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,7 +86,8 @@
       ],
       "@nimbus-ds/sidebar": ["./packages/react/src/composite/Sidebar/src"],
       "@nimbus-ds/tabs": ["./packages/react/src/composite/Tabs/src"],
-      "@nimbus-ds/table": ["./packages/react/src/composite/Table/src"]
+      "@nimbus-ds/table": ["./packages/react/src/composite/Table/src"],
+      "@nimbus-ds/timeline": ["./packages/react/src/composite/Timeline/src"]
     }
   }
 }
