chore: remove to pre-push run from CI

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
     "pre-commit": "lint-staged",
-    "pre-push": "yarn test:coverage && yarn lint && yarn types:check && yarn bump:check",
+    "pre-push": "yarn lint && yarn types:check && yarn bump:check",
     "prepare-husky": "husky install",
     "publish:next": "yarn bump:check && yarn bump:next && npm run build && yarn publish:npm:next",
     "publish:stable": "npm run build && yarn bump:stable && yarn publish:npm:stable",
