fix: added coverage exclusion for style package

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,8 +7,8 @@ sonar.projectName=nimbus-design-system
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.scripts,packages
-sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx
+sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx, 
 sonar.test.inclusions=packages/**/*.spec.tsx
-sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**
+sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**, packages/styles/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.qualitygate.wait=true
