--- a/packages/react/src/atomic/MultiSelect/package.json
+++ b/packages/react/src/atomic/MultiSelect/package.json
@@ -14,6 +14,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/chip": "workspace:^",
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/skeleton": "workspace:^"
