--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
-
+  pull_request:
+    types: [opened, synchronize, reopened]
+    
 jobs:
   publish-storybook:
     runs-on: ubuntu-latest
