--- a/packages/react/src/atomic/Tooltip/package.json
+++ b/packages/react/src/atomic/Tooltip/package.json
@@ -14,7 +14,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.0"
+    "@floating-ui/react": "^0.26.0",
+    "@nimbus-ds/box": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
