--- a/packages/core/typings/package.json
+++ b/packages/core/typings/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/typings",
-  "version": "1.1.0",
+  "version": "1.2.0-rc.3",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -23,5 +23,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "1.1.0"
 }
