--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "homepage": "https://github.com/TiendaNube/nimbus-design-system#readme",
   "dependencies": {
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
