--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -23,13 +23,12 @@
   },
   "devDependencies": {
     "@types/dashify": "^1.0.1",
-    "@types/fs-extra": "^11",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3",
     "@vanilla-extract/webpack-plugin": "^2.3.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "dashify": "^2.0.0",
-    "fs-extra": "^11.3.0",
+    "fast-glob": "^3.3.3",
     "mini-css-extract-plugin": "^2.7.2",
     "terser-webpack-plugin": "^5.3.6",
     "type-fest": "^4.37.0",
