feat: updated all packages changelogs, removed rcs and added 'use client'

--- a/.eslintrc
+++ b/.eslintrc
@@ -108,6 +108,7 @@
         "trailingComma": "none"
       }
     ],
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
   }
 }
