--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "9.13.0-rc.7",
+  "version": "9.12.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
