--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/icons",
-  "version": "1.7.0-rc.3",
+  "version": "1.6.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
