--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,9 +31,9 @@ jobs:
         run: yarn
 
       - name: Run build
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
-        run: yarn build
+        run: |
+          export NODE_OPTIONS="--max_old_space_size=8192"
+          yarn build
 
       - name: Run lint
         run: yarn lint
