--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,6 +10,10 @@ jobs:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     steps:
+      - name: Debug TURBO_TEAM (temporary)
+        run: |
+          echo "TURBO_TEAM=${{ secrets.TURBO_TEAM }}"
+
       - name: Checkout
         uses: actions/checkout@v3
 
