--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,6 +5,7 @@ on: [pull_request]
 jobs:
   pipeline-quality:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
@@ -30,11 +31,10 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
 
-      - name: Run build tokens
-        run: npm run build:tokens
-
-      - name: Run build icons
-        run: npm run build:icons
+      - name: Run build
+        run: |
+          export NODE_OPTIONS="--max_old_space_size=12288"
+          yarn build
 
       - name: Run lint
         run: yarn lint
