--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -33,5 +33,6 @@
     "webpack": "^5.76.0",
     "webpack-merge": "^5.8.0",
     "webpack-shell-plugin-next": "^2.3.1"
-  }
+  },
+  "stableVersion": "1.4.0"
 }
