--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -28,5 +28,6 @@
     "@nimbus-ds/webpack": "workspace:^",
     "@svgr/cli": "^6.5.1",
     "svgo": "^3.0.2"
-  }
+  },
+  "stableVersion": "1.6.0"
 }
