--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,5 +31,151 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./Badge": {
+      "import": "./dist/Badge/index.js",
+      "require": "./dist/Badge/index.js"
+    },
+    "./Box": {
+      "import": "./dist/Box/index.js",
+      "require": "./dist/Box/index.js"
+    },
+    "./Button": {
+      "import": "./dist/Button/index.js",
+      "require": "./dist/Button/index.js"
+    },
+    "./Checkbox": {
+      "import": "./dist/Checkbox/index.js",
+      "require": "./dist/Checkbox/index.js"
+    },
+    "./Chip": {
+      "import": "./dist/Chip/index.js",
+      "require": "./dist/Chip/index.js"
+    },
+    "./FileUploader": {
+      "import": "./dist/FileUploader/index.js",
+      "require": "./dist/FileUploader/index.js"
+    },
+    "./Icon": {
+      "import": "./dist/Icon/index.js",
+      "require": "./dist/Icon/index.js"
+    },
+    "./IconButton": {
+      "import": "./dist/IconButton/index.js",
+      "require": "./dist/IconButton/index.js"
+    },
+    "./Input": {
+      "import": "./dist/Input/index.js",
+      "require": "./dist/Input/index.js"
+    },
+    "./Label": {
+      "import": "./dist/Label/index.js",
+      "require": "./dist/Label/index.js"
+    },
+    "./Link": {
+      "import": "./dist/Link/index.js",
+      "require": "./dist/Link/index.js"
+    },
+    "./List": {
+      "import": "./dist/List/index.js",
+      "require": "./dist/List/index.js"
+    },
+    "./MultiSelect": {
+      "import": "./dist/MultiSelect/index.js",
+      "require": "./dist/MultiSelect/index.js"
+    },
+    "./Popover": {
+      "import": "./dist/Popover/index.js",
+      "require": "./dist/Popover/index.js"
+    },
+    "./Radio": {
+      "import": "./dist/Radio/index.js",
+      "require": "./dist/Radio/index.js"
+    },
+    "./Select": {
+      "import": "./dist/Select/index.js",
+      "require": "./dist/Select/index.js"
+    },
+    "./Skeleton": {
+      "import": "./dist/Skeleton/index.js",
+      "require": "./dist/Skeleton/index.js"
+    },
+    "./Spinner": {
+      "import": "./dist/Spinner/index.js",
+      "require": "./dist/Spinner/index.js"
+    },
+    "./Tag": {
+      "import": "./dist/Tag/index.js",
+      "require": "./dist/Tag/index.js"
+    },
+    "./Text": {
+      "import": "./dist/Text/index.js",
+      "require": "./dist/Text/index.js"
+    },
+    "./Textarea": {
+      "import": "./dist/Textarea/index.js",
+      "require": "./dist/Textarea/index.js"
+    },
+    "./Thumbnail": {
+      "import": "./dist/Thumbnail/index.js",
+      "require": "./dist/Thumbnail/index.js"
+    },
+    "./Title": {
+      "import": "./dist/Title/index.js",
+      "require": "./dist/Title/index.js"
+    },
+    "./Toast": {
+      "import": "./dist/Toast/index.js",
+      "require": "./dist/Toast/index.js"
+    },
+    "./Toggle": {
+      "import": "./dist/Toggle/index.js",
+      "require": "./dist/Toggle/index.js"
+    },
+    "./Tooltip": {
+      "import": "./dist/Tooltip/index.js",
+      "require": "./dist/Tooltip/index.js"
+    },
+    "./Accordion": {
+      "import": "./dist/Accordion/index.js",
+      "require": "./dist/Accordion/index.js"
+    },
+    "./Alert": {
+      "import": "./dist/Alert/index.js",
+      "require": "./dist/Alert/index.js"
+    },
+    "./Card": {
+      "import": "./dist/Card/index.js",
+      "require": "./dist/Card/index.js"
+    },
+    "./Collapsible": {
+      "import": "./dist/Collapsible/index.js",
+      "require": "./dist/Collapsible/index.js"
+    },
+    "./Modal": {
+      "import": "./dist/Modal/index.js",
+      "require": "./dist/Modal/index.js"
+    },
+    "./Pagination": {
+      "import": "./dist/Pagination/index.js",
+      "require": "./dist/Pagination/index.js"
+    },
+    "./Sidebar": {
+      "import": "./dist/Sidebar/index.js",
+      "require": "./dist/Sidebar/index.js"
+    },
+    "./Table": {
+      "import": "./dist/Table/index.js",
+      "require": "./dist/Table/index.js"
+    },
+    "./Tabs": {
+      "import": "./dist/Tabs/index.js",
+      "require": "./dist/Tabs/index.js"
+    }
   }
 }
