fix: fixed build

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "scripts": {
     "build": "yarn build:packages",
-    "build:packages": "yarn build:tokens && yarn build:icons && yarn build:components && babel-node -x .ts ./.scripts/build-packages",
+    "build:packages": "yarn build:webpack && yarn build:tokens && yarn build:icons && yarn build:components && babel-node -x .ts ./.scripts/build-packages",
     "build:components": "babel-node -x .ts ./.scripts/build-components",
     "build:docs": "babel-node -x .ts ./.scripts/json-documentation",
     "build:icons": "yarn workspace @nimbus-ds/icons build",
     "build:tokens": "yarn workspace @nimbus-ds/tokens build",
+    "build:webpack": "yarn workspace @nimbus-ds/webpack build",
     "build:storybook": "storybook build -o .build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
@@ -32,7 +33,7 @@
     "publish:stable": "npm run build && yarn bump:stable && yarn publish:npm:stable",
     "publish:npm:next": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public --tag next",
     "publish:npm:stable": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public",
-    "reset": "yarn clean && rm -rf node_modules .yarn/cache .turbo",
+    "reset": "yarn clean && rm -rf node_modules .yarn/cache .turbo && git clean -fdx",
     "storybook": "storybook dev -p 6006",
     "start:dev": "yarn storybook",
     "test": "jest --passWithNoTests --no-cache --runInBand --watchAll=false",
