--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   publish-packages-npm:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-large
     timeout-minutes: 18
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
