fix: divided workflow in steps

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,15 +10,6 @@ jobs:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     steps:
-      - name: Increase swapfile
-        run: |
-          sudo swapoff -a
-          sudo fallocate -l 15G /swapfile
-          sudo chmod 600 /swapfile
-          sudo mkswap /swapfile
-          sudo swapon /swapfile
-          sudo swapon --show
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -39,11 +30,19 @@ jobs:
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
+      - name: Build tokens
+        run: yarn build:tokens
 
-      - name: Run build
+      - name: Build icons
+        run: yarn build:icons
+      
+      - name: Build components
         run: |
           export NODE_OPTIONS="--max_old_space_size=12288"
-          yarn build
+          yarn build:components
+
+      - name: Build packages
+        run: babel-node -x .ts ./.scripts/build-packages"
 
       - name: Run lint
         run: yarn lint
